--- a/index.html
+++ b/index.html
@@ -1,18 +1,95 @@
 <!doctype html>
-<html>
+<html lang="nl">
 <head>
 <meta charset="utf-8">
-<title>restaurant</title>
+<meta http-equiv="X-UA-Compatible" content="IE=edge">
+<title>homepage</title>
 <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-	<link rel="stylesheet" href="../Chapter 8/css/bootstrap.min.css">
-	<link href="../Chapter 8/css/styles.css" rel="stylesheet" type="text/css">
-	<link href="https://fonts.googleapis.com/css?family=Raleway&display=swap" rel="stylesheet">
-	<link href="../Chapter 8/CSS/styles.css" rel="stylesheet" type="text/css">
+<!-- <link rel="stylesheet" href="../Chapter 8/css/bootstrap.min.css"> -->
+<link href="CSS/bootstrap-4.4.1.css" rel="stylesheet" type="text/css">
+<link href="Chapter8/CSS/styles.css" rel="stylesheet" type="text/css">
+<link href="https://fonts.googleapis.com/css?family=Raleway&display=swap" rel="stylesheet">
+<link href="Chapter8/CSS/styles.css" rel="stylesheet" type="text/css">
 </head>
-
 <body>
-	<!-- jQuery first (Popper.js is included in the Bootstrap JS) then Bootstrap JS -->
-	<script src="../Chapter 8/js/jquery-3.4.1.slim.min.js"></script>
-	<script src="../Chapter 8/js/bootstrap.bundle.min.js"></script>
+	<header class="container-fluid">
+		<nav class="navbar navbar-expand-lg navbar-light bg-light">
+		  <a class="navbar-brand" href="#">Yummichy</a>
+		  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+			<span class="navbar-toggler-icon"></span>
+		  </button>
+		  <div class="collapse navbar-collapse" id="navbarSupportedContent">
+			<ul class="navbar-nav mr-auto">
+			  <li class="nav-item active">
+				<a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+			  </li>
+			  <li class="nav-item">
+				<a class="nav-link" href="#">About</a>
+			  </li>
+			  <li class="nav-item">
+				<a class="nav-link" href="#">Menu</a>
+			  </li>
+			  <li class="nav-item">
+				  <a class="nav-link" href="#">Contact</a>
+			  </li>
+			</ul>
+			<form class="form-inline my-2 my-lg-0">
+			  <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
+			  <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+			</form>
+		  </div>
+		</nav>
+		
+	  <div id="carouselExampleIndicators1" class="carousel slide" data-ride="carousel" style="background-color: grey">
+		  <ol class="carousel-indicators">
+		    <li data-target="#carouselExampleIndicators1" data-slide-to="0" class="active"></li>
+		    <li data-target="#carouselExampleIndicators1" data-slide-to="1"></li>
+		    <li data-target="#carouselExampleIndicators1" data-slide-to="2"></li>
+	    </ol>
+		  <div class="carousel-inner" role="listbox">
+		    <div class="carousel-item active"> <img class="d-block mx-auto" src="Images/Carousel_Placeholder.png" alt="First slide">
+		      <div class="carousel-caption">
+		        <h5>First slide Heading</h5>
+		        <p>First slide Caption</p>
+	          </div>
+	        </div>
+		    <div class="carousel-item"> <img class="d-block mx-auto" src="Images/Carousel_Placeholder.png" alt="Second slide">
+		      <div class="carousel-caption">
+		        <h5>Second slide Heading</h5>
+		        <p>Second slide Caption</p>
+	          </div>
+	        </div>
+		    <div class="carousel-item"> <img class="d-block mx-auto" src="Images/Carousel_Placeholder.png" alt="Third slide">
+		      <div class="carousel-caption">
+		        <h5>Third slide Heading</h5>
+		        <p>Third slide Caption</p>
+	          </div>
+	        </div>
+	    </div>
+		  <a class="carousel-control-prev" href="#carouselExampleIndicators1" role="button" data-slide="prev"> <span class="carousel-control-prev-icon" aria-hidden="true"></span> <span class="sr-only">Previous</span> </a> <a class="carousel-control-next" href="#carouselExampleIndicators1" role="button" data-slide="next"> <span class="carousel-control-next-icon" aria-hidden="true"></span> <span class="sr-only">Next</span> </a> </div>
+    </header>
+	
+<main class="container">
+	<div class="row">
+		<div class="col">
+	  		<h1>Introductory to Yummichy</h1>
+			<p>lorum ipsum</p>
+		</div>
+		<div class="col">
+			<h1>Route</h1>
+			<p>lorum ipsum</p>
+		</div>
+	</div>
+</main>
+
+<footer class="container-fluid">&copy; 2020 Yummichy </footer>
+	
+<!-- jQuery first (Popper.js is included in the Bootstrap JS) then Bootstrap JS -->
+	<!-- <script src="../Chapter 8/js/jquery-3.4.1.slim.min.js"></script> -->
+<script src="JS/jquery-3.4.1.min.js"></script>
+
+	<!-- <script src="../Chapter 8/js/bootstrap.bundle.min.js"></script> -->
+<script src="JS/popper.min.js"></script>
+<script src="JS/bootstrap-4.4.1.js"></script>
 </body>
 </html>
