--- a/index.html
+++ b/index.html
@@ -9,12 +9,20 @@
 <link href="CSS/bootstrap-4.4.1.css" rel="stylesheet" type="text/css">
 <link href="Chapter8/CSS/styles.css" rel="stylesheet" type="text/css">
 <link href="https://fonts.googleapis.com/css?family=Raleway&display=swap" rel="stylesheet">
-<link href="Chapter8/CSS/styles.css" rel="stylesheet" type="text/css">
+<link href="CSS/styles.css" rel="stylesheet" type="text/css">
+<link rel="stylesheet" href="https://unpkg.com/leaflet@1.6.0/dist/leaflet.css"
+   integrity="sha512-xwE/Az9zrjBIphAcBb3F6JVqxf46+CDLwfLMHloNu6KEQCAWi6HcDUbeOfBIptF7tcCzusKFjFw2yuvEpDL9wQ=="
+   crossorigin=""/>
+<script src="https://unpkg.com/leaflet@1.6.0/dist/leaflet.js"
+   integrity="sha512-gZwIG9x3wUXg2hdXF6+rVkLF/0Vi9U8D2Ntg4Ga5I5BZpVkVxlJWbSQtXPSiUTtC0TjtGOmxa1AJPuV0CPthew=="
+   crossorigin=""></script>
 </head>
 <body>
 	<header class="container-fluid">
-		<nav class="navbar navbar-expand-lg navbar-light bg-light">
-		  <a class="navbar-brand" href="#">Yummichy</a>
+		<nav class="navbar navbar-expand-lg navbar-light">
+		  <a class="navbar-brand" href="#">
+			<img alt="yummichy logo" src="Images/yummichylogo.png">
+			</a>
 		  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
 			<span class="navbar-toggler-icon"></span>
 		  </button>
@@ -47,22 +55,16 @@
 		    <li data-target="#carouselExampleIndicators1" data-slide-to="2"></li>
 	    </ol>
 		  <div class="carousel-inner" role="listbox">
-		    <div class="carousel-item active"> <img class="d-block mx-auto" src="Images/Carousel_Placeholder.png" alt="First slide">
+		    <div class="carousel-item active"> <img class="d-block mx-auto" src="Images/f717c6d758e8607c9be8077f8f283cd1.jpg" alt="First slide">
 		      <div class="carousel-caption">
-		        <h5>First slide Heading</h5>
-		        <p>First slide Caption</p>
 	          </div>
 	        </div>
-		    <div class="carousel-item"> <img class="d-block mx-auto" src="Images/Carousel_Placeholder.png" alt="Second slide">
+		    <div class="carousel-item"> <img class="d-block mx-auto" src="Images/0354b2564053552720ef2a018551f937.jpg" alt="Second slide">
 		      <div class="carousel-caption">
-		        <h5>Second slide Heading</h5>
-		        <p>Second slide Caption</p>
 	          </div>
 	        </div>
-		    <div class="carousel-item"> <img class="d-block mx-auto" src="Images/Carousel_Placeholder.png" alt="Third slide">
+		    <div class="carousel-item"> <img class="d-block mx-auto" src="Images/90f679afdc251ce5938749832efd7b19.jpg" alt="Third slide">
 		      <div class="carousel-caption">
-		        <h5>Third slide Heading</h5>
-		        <p>Third slide Caption</p>
 	          </div>
 	        </div>
 	    </div>
@@ -71,13 +73,24 @@
 	
 <main class="container">
 	<div class="row">
-		<div class="col">
+		<div class="col-sm-6 col-md-8">
 	  		<h1>Introductory to Yummichy</h1>
 			<p>lorum ipsum</p>
 		</div>
-		<div class="col">
+		<div class="col-sm-6 col-md-4">
 			<h1>Route</h1>
-			<p>lorum ipsum</p>
+			<div id="mapid"></div>
+			<script>
+				var mymap = L.map('mapid').setView([51.505, -0.09], 13);
+				L.tileLayer('https://api.mapbox.com/styles/v1/{id}/tiles/{z}/{x}/{y}?access_token={accessToken}', {
+    			attribution: 'Map data &copy; <a href="https://www.openstreetmap.org/">OpenStreetMap</a> contributors, <a href="https://creativecommons.org/licenses/by-sa/2.0/">CC-BY-SA</a>, Imagery © <a href="https://www.mapbox.com/">Mapbox</a>',
+    			maxZoom: 18,
+    			id: 'mapbox/streets-v11',
+    			tileSize: 512,
+    			zoomOffset: -1,
+    			accessToken: 'your.mapbox.access.token'
+				}).addTo(mymap);
+			</script>
 		</div>
 	</div>
 </main>
