--- a/About.html
+++ b/About.html
@@ -20,8 +20,8 @@
 <body>
 	<header class="container-fluid">
 		<nav class="navbar navbar-expand-lg navbar-light">
-		  <a class="navbar-brand" href="#">
-			<img alt="yummichy logo" src="Images/yummichylogo.png" href="index.html">
+		  <a class="navbar-brand" href="index.html">
+			<img alt="yummichy logo" src="Images/yummichylogo.png">
 			</a>
 		  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
 			<span class="navbar-toggler-icon"></span>
@@ -29,10 +29,10 @@
 		  <div class="collapse navbar-collapse" id="navbarSupportedContent">
 			<ul class="navbar-nav mr-auto">
 			  <li class="nav-item active">
-				<a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+				<a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
 			  </li>
 			  <li class="nav-item">
-				<a class="nav-link" href="About.html">About</a>
+				<a class="nav-link" href="#">About</a>
 			  </li>
 			  <li class="nav-item">
 				<a class="nav-link" href="#">Menu</a>
@@ -47,34 +47,12 @@
 			</form>
 		  </div>
 		</nav>
-		
-	  <div id="carouselExampleIndicators1" class="carousel slide" data-ride="carousel" style="background-color: grey">
-		  <ol class="carousel-indicators">
-		    <li data-target="#carouselExampleIndicators1" data-slide-to="0" class="active"></li>
-		    <li data-target="#carouselExampleIndicators1" data-slide-to="1"></li>
-		    <li data-target="#carouselExampleIndicators1" data-slide-to="2"></li>
-	    </ol>
-		  <div class="carousel-inner" role="listbox">
-		    <div class="carousel-item active"> <img class="d-block mx-auto" src="Images/f717c6d758e8607c9be8077f8f283cd1.jpg" alt="First slide">
-		      <div class="carousel-caption">
-	          </div>
-	        </div>
-		    <div class="carousel-item"> <img class="d-block mx-auto" src="Images/0354b2564053552720ef2a018551f937.jpg" alt="Second slide">
-		      <div class="carousel-caption">
-	          </div>
-	        </div>
-		    <div class="carousel-item"> <img class="d-block mx-auto" src="Images/90f679afdc251ce5938749832efd7b19.jpg" alt="Third slide">
-		      <div class="carousel-caption">
-	          </div>
-	        </div>
-	    </div>
-		  <a class="carousel-control-prev" href="#carouselExampleIndicators1" role="button" data-slide="prev"> <span class="carousel-control-prev-icon" aria-hidden="true"></span> <span class="sr-only">Previous</span> </a> <a class="carousel-control-next" href="#carouselExampleIndicators1" role="button" data-slide="next"> <span class="carousel-control-next-icon" aria-hidden="true"></span> <span class="sr-only">Next</span> </a> </div>
     </header>
 	
 <main class="container">
 	<div class="row">
 		<div class="col-sm-6 col-md-8">
-	  		<h1>Introductory to Yummichy</h1>
+	  		<h1>About</h1>
 			<p>lorum ipsum</p>
 		</div>
 		<div class="col-sm-6 col-md-4">
@@ -94,6 +72,29 @@
 		</div>
 	</div>
 </main>
+<br>
+<section class="container-fluid">
+	<div class="row">
+		<div class="col1">
+			<img alt="food1" class="food" src="Images/6afa238e0a451833c3200bea7b4907e4.jpg">
+		</div>
+		<div class="col2">
+			<img alt="food2" class="food" src="Images/24de5ae60cadb053e9c754ee4ef4248f.jpg">
+		</div>
+		<div class="col3">
+			<img alt="food3" class="food" src="Images/304d2cbc2c038d092851443b944a3dc9.jpg">
+		</div>
+		<div class="col4">
+		<img alt="food4" class="food" src="Images/d6aad05ebd567064963258ed9fe87156.jpg">
+		</div>
+		<div class="col5">
+		<img alt="food5" class="food" src="Images/ecc8632651c936206930aef45498539a.jpg">
+		</div>
+		<div class="col6">
+		<img alt="food6" class="food" src="Images/28a4543197223246877c2268806cd902.jpg">
+		</div>
+	</div>
+</section>
 
 <footer class="container-fluid">&copy; 2020 Yummichy </footer>
 	
